<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LocationLogger</string>
    <string name="hello_world">Hello world!\nThis value is still default&amp;#8230;</string>
    <string name="menu_settings">Settings</string>
    <string name="start">Start</string>
	<string name="bind">Bind</string>
    <string name="stop">Stop</string>
	<string name="service_name">LocationLoggerService</string>
	<string name="local_service_started">LocationLogger is running</string>
	<string name="local_service_stopped">LocationLogger has stopped</string>
	<string name="Export">Export KML to SD Card</string>
	<string name="gps_string">GPS</string>
</resources>