<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView01"
	android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent">

		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
		    
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textStyle="bold"
				android:id="@+id/ButtonStart" android:text="@string/start"
				android:textSize="16px" android:width="90px" />
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textStyle="bold"
				android:id="@+id/ButtonBind" android:text="@string/bind"
				android:textSize="16px" android:width="90px" />
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textStyle="bold"
				android:id="@+id/ButtonStop" android:text="@string/stop"
				android:textSize="16px" android:width="90px" />
		 	<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textStyle="normal"
				android:id="@+id/CheckGPS" android:text="@string/gps_string"
				android:textSize="16px" android:width="90px" />
		</LinearLayout>
			
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextOutput"
			android:text="Here we write tezxty!"></TextView>
		<TableLayout android:id="@+id/TableLayout01"
			android:layout_height="wrap_content" android:padding="3px"
			android:layout_width="fill_parent">

		</TableLayout>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/ButtonExport"
			android:includeFontPadding="true" android:text="@string/Export"
			android:textSize="16px" android:textStyle="bold"></Button>




		<ToggleButton android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/ToggleButtonDebug"
			android:textOn="Debug On" android:textOff="Debug Off" android:width="90px"></ToggleButton>


	</LinearLayout>
</ScrollView>